# faad2

./: meson.build  meson_options.txt
docs/: meson.build
frontend/: meson.build
include/: meson.build
libfaad/: meson.build
plugins/: meson.build
plugins/mpeg4ip/: meson.build
