# SPDX-FileCopyrightText: 2023 Amyspark <amy@amyspark.me>
# SPDX-License-Identifier: BSD-3-Clause

# The XMMS plugin was transitively obsoleted in v2.9.0 through the
# removal of mp4ff.
# See https://github.com/knik0/faad2/commit/5530ffdfa6e9d89f5956b8a0901b5d168ce7d46b

if cdata.has('HAVE_MPEG4IP_PLUG')
	subdir('mpeg4ip')
endif
